<resources>
    <string name="app_name">ZWLL</string>
    <string name="app_main">ZWLL</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="under_construction">施工中</string>

    <string name="dry">Dry</string>
    <string name="next_one">下一个</string>
    <string name="previous_one">上一个</string>
    <string name="drawer_open">抽屉打开</string>
    <string name="drawer_close">抽屉关闭</string>
    <string name="tip">天天吃肉吃不胖，天天DrySister身体棒</string>


    <string name="button_previous">上一条</string>
    <string name="button_next">下一条</string>

    <!-- 抽屉菜单 -->
    <string name="menu_you">你</string>
    <string name="menu_call_you">call you</string>

    <string name="menu_my">我</string>

    <string name="menu_eating">开饭啦</string>
    <string name="menu_eating_cookbook">菜谱</string>


    <string name="menu_pet">宠物</string>

    <string name="menu_tools">小工具箱</string>
    <string name="menu_tools_zxing">二维码工具</string>


    <string name="menu_see">看看</string>
    <string name="menu_see_news">读书看报</string>

    <string name="menu_use">用用</string>
    <string name="menu_use_check_weather">查查天气</string>
    <string name="menu_use_check_subway">查查地铁</string>


    <string name="menu_else">其他</string>
    <string name="menu_setting">设置</string>
    <string name="menu_else_about">关于</string>
    <string name="menu_zwll_version">ZWLL: %1$s</string>

    <string name="text_affirm">确定</string>
    <string name="text_button_cancel">取消</string>


    <string name="button_copy">复制</string>


    <string name="error_enter_empty">输入为空，请重新输入</string>


    <!-- Working -->
    <string name="working">前方正在施工&#8230;</string>

    <!--网络状态错误-->
    <string name="network_unconnected">尚未连接网络，请打开网络重新加载！</string>
    <string name="network_connected_exception">网络连接异常，请稍后重试！</string>
    <string name="network_socket_time_out">网络请求超时，请检查网络状态！</string>
    <string name="network_json_syntax_exception">服务器数据异常，请稍候重试！</string>
    <string name="network_unknown_host">当前网络不可用，请检查网络情况！</string>

    <!--刷新提示相关-->
    <string name="refresh_success">刷新成功！</string>
    <string name="load_more_num">嘤嘤嘤，新增%1$d枚%2$s！</string>

    <!--设置相关-->
    <string name="just_load_in_wifi">仅在WIFI下加载图片</string>
    <string name="clear_cache">清空缓存</string>
    <string name="cur_cache">当前缓存 %1$f mb</string>
    <string name="check_update">检查更新</string>
    <string name="cur_version">当前版本 %1$s</string>
    <string name="give_praise">给个好评</string>
    <string name="commit_question">问题反馈</string>
    <string name="share_friends">推荐给好基友</string>
    <string name="contact_me">联系我</string>


    <string name="text_backup">立即</string>
    <string name="text_backup_save">备份文件将保存到/backup_myApp/MyAppBackupUser.db</string>
    <string name="text_setting_money">记账</string>
    <string name="text_setting_type_manage">收支类型管理</string>
    <string name="text_setting_backup">备份</string>
    <string name="text_go_backup">立即备份</string>
    <string name="text_setting_restore">恢复备份</string>
    <string name="text_setting_about_and_help">关于|帮助</string>
    <string name="text_about">关于</string>
    <string name="text_setting_score">评分</string>
    <string name="text_setting_donate">捐赠作者</string>
    <string name="text_privacy_policy">隐私政策</string>
    <string name="text_setting_lisence">开源许可证</string>
    <string name="text_setting_help">帮助</string>
    <string name="text_setting_good_score">给个好评呗</string>
    <string name="text_about_content">了解我们的设计理念</string>
    <string name="text_setting_auto_backup">自动备份</string>
    <string name="text_setting_go_backup_content">备份文件将保存到/backup_myApp</string>
    <string name="text_setting_restore_content">备份文件将从/backup_myApp读取</string>
    <string name="text_setting_auto_backup_content">数据有改变自动备份（建议开启）</string>
    <string name="text_restore">恢复备份</string>
    <string name="text_list_restore">以下是备份文件，点击恢复：</string>
    <string name="text_restore_tip">备份文件名带有Auto字样表示自动备份，带有User表示点击立即备份按钮手动备份，恢复之前会保存一份恢复之前的数据。</string>
    <string name="text_before_reverting">_恢复之前</string>
    <string name="text_storage">开启存储权限</string>
    <string name="text_storage_content">为了自动备份您的记账数据，需要开启存储权限。</string>
    <string name="text_open_permissions">开启权限</string>
    <string name="text_storage_permission_tip">备份相关操作需要存储权限，去设置界面开启权限</string>
    <string name="text_close_auto_backup">关闭自动备份</string>
    <string name="text_close_auto_backup_tip">关闭自动备份后，需要手动点击「立即备份」来备份数据，可能会丢失部分最新的数据。</string>
    <string name="text_tip_backup_fail">自动备份失败</string>
    <string name="text_share">分享</string>
    <string name="text_more">更多</string>
    <string name="toast_backup_success">备份成功</string>
    <string name="toast_backup_fail">备份失败</string>
    <string name="toast_backup_list_fail">备份文件列表获取失败</string>
    <string name="toast_restore_fail">恢复备份失败</string>
    <string name="see_more">See More ...</string>


    <!--关于相关-->
    <string name="app_version">Version %1$s</string>
    <string name="about_drysister">关于DrySister</string>
    <string name="about_me">关于我</string>
    <string name="msg_switch_use">Switch thumb:按钮样式 track:轨道样式</string>
    <string name="msg_toggleButton_use">ToggleButton textOff/textOn 控制开关显示内容
        \n disabledAlpha 设置按钮在禁用时的透明度(取值范围0-1)
    </string>

    <string name="msg_seekbar_use">
        seekbar是progressBar子类
    </string>

    <string name="msg_ratingBar_use">
        ratingBar是progressBar子类
        \n android:numStars：显示多少个星星，必须为整数
        \n android:rating：默认评分值，必须为浮点数
        \n android:stepSize： 评分每次增加的值，必须为浮点数
        \n 图标间距:图标左右预留间距
    </string>


</resources>
