<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">


    <item android:title="@string/menu_you">
        <menu>
            <item
                    android:id="@+id/nav_call_you"
                    android:icon="@mipmap/icon_call"
                    android:title="@string/menu_call_you" />
        </menu>
    </item>

    <item android:title="@string/menu_my">
        <menu>
            <item
                    android:id="@+id/nav_pet"
                    android:icon="@mipmap/icon_pet"
                    android:title="@string/menu_pet" />
        </menu>
    </item>

    <item android:title="@string/menu_else" >
        <menu>
            <item
                    android:id="@+id/nav_else_setting"
                    android:title="@string/menu_else_setting" />
            <item
                    android:id="@+id/nav_else_about"
                    android:title="@string/menu_else_about" />
        </menu>
    </item>

</menu>

